# matryoshka

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yaml
.run/: Decode Actual.run.xml  Decode Encoded.run.xml  Encode.run.xml
matryoshka-cli/: Cargo.toml
matryoshka-cli/src/: main.rs
matryoshka-core/: Cargo.toml
matryoshka-core/src/: header.rs  lib.rs  node.rs
