[package]
name = "matryoshka-core"
version = "0.0.0-git"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = { version = "1.0", default-features = false, features = ["backtrace"] }
indexmap = { version = "2.0", default-features = false, features = ["serde"] }
base64 = { version = "0.21", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
binrw = { version = "0.11", default-features = false, features = ["std"] }
modular-bitfield = { version = "0.11", default-features = false }
